# Agents-assemble

./: .env.example  .gitignore  Dockerfile.node  README.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  tsconfig.json
agents/agent-cards/: fhir.json  memory.json  orchestration.json  triage.json
agents/fhir/: index.ts
agents/memory/: Cargo.toml  Dockerfile  index.ts
agents/memory/bride/: ebbinghaus.ts  gut-feeling.ts  hdc.ts
agents/memory/persistence/: ebbinghaus-store.ts
agents/memory/src/: main.rs
agents/memory/src/bride/: ebbinghaus.rs  gut_feeling.rs  hdc.rs  mod.rs
agents/triage/: index.ts
mcp/: healthcare-server.ts
orchestration/: cascade.ts
shared/: fhir-client.ts  llm-utils.ts  types.ts
ui/: index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  api.ts  index.css
ui/src/components/: AgentActivityLog.tsx  AgentStatusBar.tsx  ChatInput.tsx  Header.tsx  MemoryPanel.tsx  ResponseCard.tsx  ThinkingIndicator.tsx  TriageCard.tsx
