[package]
name = "memory-agent"
version = "0.1.0"
edition = "2021"
description = "Memory Agent (Frankenstein Core) — Bride Architecture: Ebbinghaus + HDC + Gut Feeling"

[dependencies]
actix-web = "4"
actix-rt = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
log = "0.4"
env_logger = "0.11"
